@@ -18,6 +18,7 @@ import codecs
 import imghdr
 import string
 import posixpath
+import unicodedata
 import cPickle as pickle
 from os import path
 from glob import glob
@@ -1531,7 +1532,7 @@ class BuildEnvironment:
         # sort the index entries; put all symbols at the front, even those
         # following the letters in ASCII, this is where the chr(127) comes from
         def keyfunc(entry, lcletters=string.ascii_lowercase + '_'):
-            lckey = entry[0].lower()
+            lckey = unicodedata.normalize('NFD', entry[0].lower())
             if lckey[0:1] in lcletters:
                 return chr(127) + lckey
             return lckey
@@ -1574,7 +1575,7 @@ class BuildEnvironment:
             k, v = item
             v[1] = sorted((si, se) for (si, (se, void)) in v[1].iteritems())
             # now calculate the key
-            letter = k[0].upper()
+            letter = unicodedata.normalize('NFD', k[0])[0].upper()
             if letter in letters:
                 return letter
             else:
