@@ -58,6 +58,12 @@ Release 1.1 (in development)
 Release 1.0.6 (in development)
 ==============================
 
+* #383, #148: Support sorting a limited range of accented characters
+  in the general index and the glossary.
+
+* #570: Try decoding ``-D`` and ``-A`` command-line arguments with
+  the locale's preferred encoding.
+
 * #528: Observe :confval:`locale_dirs` when looking for the JS
   translations file.
 
